# ActionPlay

./: .gitignore  CMakeLists.txt  README.md  build.bat
installer/: setup.iss
src/: Action.h  ActionPlay.rc  MainWindow.cpp  MainWindow.h  NameDialog.cpp  NameDialog.h  Player.cpp  Player.h  Recorder.cpp  Recorder.h  RecordingStore.cpp  RecordingStore.h  main.cpp  resource.h
